--- a/kubernetes/webapp.yml
+++ b/kubernetes/webapp.yml
@@ -21,3 +21,9 @@ spec:
             cpu: "1"
         ports:
         - containerPort: 80
+        env:
+        - name: ASPNETCORE_ENVIRONMENT
+          value: Development
+        - name: "ApiSettings:BaseAddress"
+          value: apigateway
+
